2009-11-19  Mario Carrion  <mcarrion@novell.com>

	* System.Windows.Automation.Peers/SliderAutomationPeerTest.cs 
	  System.Windows.Automation.Peers/ProgressBarAutomationPeerTest.cs,
	  System.Windows.Automation.Peers/ScrollBarAutomationPeerTest.cs, 
	  System.Windows.Automation.Peers/SelectorAutomationPeerTest.cs, 
	  System.Windows.Automation.Peers/ListBoxAutomationPeerTest.cs: New
	tests: IsKeyboardFocusable and IsKeyboardFocusable_Event.
	* System.Windows.Automation.Peers/ComboBoxAutomationPeerTest.cs: New
	test IsKeyboardFocusable.
	* System.Windows.Automation.Peers/FrameworkElementAutomationPeerTest.cs:
	Test updated IsKeyboardFocusable. New tests: IsOffScreen_ScrollViewer.
	New helper methods: TestIsKeyboardFocusable,
	TestIsNotKeyboardFocusable, TestIsKeyboardFocusableEvent and
	TestIsNotKeyboardFocusableEvent.

	r: toshok

2009-11-19  Mario Carrion  <mcarrion@novell.com>

	* System.Windows.Automation.Peers/FrameworkElementAutomationPeerTest.cs:
	Test updated: IsOffScreen. New tests: IsOffScreen_Event and
	IsOffScreen_ScrollViewer.

	r: toshok
	

2009-11-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* moon-unit.mdp: Updated with new files.

2009-11-18  Sebastien Pouliot  <sebastien@ximian.com> 

	* System.Reflection/AssemblyTest.cs: Add test case where we try 
	to load somthing that exists only in moonlight and mono to make
	sure the GAC is not involved.

2009-11-18  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows.Media/MediaStreamSourceTest.cs: Add test cases
	about validations (mostly not working).

2009-11-18  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/GridTestAuto.cs: Update the failure
	  reason on GridTestAutos.StarRows5. 

2009-11-17  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/GridTestAuto.cs: We need to store
	  the sizes of all the grid segments immediately after we
	  finish measuring them. These sizes are used as our base
	  values when deciding if we should expand star rows/cols. The